# kurgin-admin-mvp

./: .env.example  .gitignore  ADMIN_UPDATE_NOTES.md  CHECKPOINT_26_STAGE_07D0_FOUNDATION.md  CHECKPOINT_27_STAGE_07D_PUBLIC_LAYER_RULES.md  CHECKPOINT_28_STAGE_07E_PUBLIC_LAYER_AUDIT.md  CHECKPOINT_29_STAGE_07E1_UI_FIXES.md  CHECKPOINT_30_STAGE_07F0_PUBLIC_EXPORT_CONTRACT.md  CHECKPOINT_31_STAGE_07F_PUBLIC_EXPORT_PREVIEW.md  CHECKPOINT_32_STAGE_08A0_CONTROLLED_PUBLISH_RULES.md  CHECKPOINT_33_STAGE_08A_MANUAL_PUBLISH_PACKAGE.md  LICENSE  NEXT_CHAT_START_HERE.md  README.md  admin_app.py  admin_auth.py  admin_batches.py  admin_integrity.py  admin_io.py  admin_log.py  admin_menu.py  admin_other_sections.py  admin_page_settings.py  admin_price_display_settings.py  admin_price_index.py  admin_price_index_matrix.py  admin_price_management.py  admin_price_table.py  admin_pricing.py  admin_pricing_candidates.py  admin_pricing_formula_v02_lite.py  admin_pricing_legacy.py  admin_pricing_rules.py  admin_pricing_settings.py  admin_pricing_shared.py  admin_pricing_template.py  admin_pricing_v02_lite_preview.py  admin_product_management.py  admin_publication_rules.py  admin_publish.py  (+10 more)
.streamlit/: config.toml
admin_product_management/: __init__.py  actions.py  archive_view.py  batches_view.py  detail_view.py  exports.py  helpers.py  navigation.py  page.py  payments.py  pricing_flow.py  publish_flow.py  sections.py  state_view.py  upload_flow.py
app/: main.py
assets/: style.css
data/: batch_payments.csv  price_table.csv  sample_stones.csv  sample_stones.xlsx  stones.csv  (+1 more)
(+93 files in other folders)
